# kube-sshuser

./: .gitignore  README.md  pyproject.toml
src/admin_tool/: cli.py  delete_user.py  provision_user.py  registry.py
src/kube_sshuser/: cli.py  common.py  delete_user.py  modify_user.py  provision_kubectl.py  provision_manifest.py  provision_user.py  status.py  terminate_pod.py
