[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "admin-tool"
version = "0.1.0"
description = "Admin tools for provisioning user SSH containers and Kubernetes resources"
requires-python = ">=3.9"

[project.scripts]
admin-tool = "admin_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]