[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-sshuser"
version = "0.4.0"
description = "Admin tools for provisioning user SSH containers and Kubernetes resources"
requires-python = ">=3.9"

[project.scripts]
kube-sshuser = "kube_sshuser.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]